fixed a horizontal scrolling bug caused by framer motion

--- a/recipe-search/src/pages/Home/Home.module.css
+++ b/recipe-search/src/pages/Home/Home.module.css
@@ -398,6 +398,10 @@
   gap: 24px;
 }
 
+.overflowAuto {
+  overflow-x: hidden;
+}
+
 @media screen and (max-width: 1050px) {
   .testimonials {
     grid-template-columns: 1fr;
